<resources>
    <string name="app_name">MusicPlayer</string>
    <string name="poster_img">Poster Image</string>
    <string name="prev_song">Previous Song</string>
    <string name="backward_song">Backward Song</string>
    <string name="play_song">Play Song</string>
    <string name="forward_song">Forward Song</string>
    <string name="next_song">Next Song</string>
    <string name="currentTime">0:00</string>
    <string name="diskoteka">Diskoteka</string>
</resources>
