<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/player_layout"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@android:color/black"
    tools:context="pl.edu.pwr.drozd.musicplayer.ViewPagerActivity"
    tools:layout_editor_absoluteX="0dp"
    tools:layout_editor_absoluteY="25dp">

    <ImageView
        android:id="@+id/poster_img"
        android:layout_width="301dp"
        android:layout_height="301dp"
        android:padding="@dimen/poster_img_padding"
        android:layout_marginLeft="8dp"
        android:layout_marginRight="8dp"
        android:contentDescription="@string/poster_img"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:srcCompat="@drawable/poster_placeholder"
        app:layout_constraintTop_toTopOf="parent"
        android:layout_marginTop="8dp"
        android:layout_marginBottom="8dp"
        android:background="@color/poster_img_background"
        app:layout_constraintBottom_toTopOf="@+id/linearLayout" />

    <LinearLayout
        android:id="@+id/linearLayout2"
        style="@style/ControlPanel"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginBottom="-1dp"
        android:layout_marginLeft="0dp"
        android:layout_marginRight="0dp"
        android:padding="@dimen/controlPanel_padding"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent">

        <ImageButton
            android:id="@+id/prev_song_btn"
            style="@style/ControlPanel.ControlButton"
            android:contentDescription="@string/prev_song"
            android:rotation="180"
            app:srcCompat="@drawable/ic_skip_next_white_24dp" />

        <ImageButton
            android:id="@+id/backward_song_btn"
            style="@style/ControlPanel.ControlButton"
            android:contentDescription="@string/backward_song"
            android:rotation="180"
            app:srcCompat="@drawable/ic_fast_forward_white_24dp" />

        <ImageButton
            android:id="@+id/play_song_btn"
            style="@style/ControlPanel.ControlButton"
            android:contentDescription="@string/play_song"
            app:srcCompat="@drawable/ic_play_arrow_white_24dp" />

        <ImageButton
            android:id="@+id/forward_song_btn"
            style="@style/ControlPanel.ControlButton"
            android:contentDescription="@string/forward_song"
            app:srcCompat="@drawable/ic_fast_forward_white_24dp" />

        <ImageButton
            android:id="@+id/next_song_btn"
            style="@style/ControlPanel.ControlButton"
            android:contentDescription="@string/next_song"
            app:srcCompat="@drawable/ic_skip_next_white_24dp" />
    </LinearLayout>

    <LinearLayout
        android:id="@+id/linearLayout"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:background="@color/seekBar_Background"
        android:gravity="center"
        android:orientation="vertical"
        android:padding="@dimen/seekBar_padding"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        android:layout_marginBottom="8dp"
        app:layout_constraintBottom_toTopOf="@+id/linearLayout2">

        <TextView
            android:id="@+id/song_title"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/hello_world"
            android:textAlignment="center"
            android:textColor="@color/songTitle_textColor"
            android:textSize="@dimen/songTitle_textSize" />

        <TextView
            android:id="@+id/currentTime"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/currentTime"
            android:textAlignment="center"
            android:textColor="@color/songCurrentTime_textColor" />

        <android.support.v7.widget.AppCompatSeekBar
            android:id="@+id/seek_bar"
            android:layout_width="match_parent"
            android:layout_height="wrap_content" />

        <TextView
            android:id="@+id/song_author"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textAlignment="center"
            android:textColor="@color/songAuthor_textColor"
            android:textSize="@dimen/songAuthor_textSize" />
    </LinearLayout>

</android.support.constraint.ConstraintLayout>
