<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/player_layout"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="pl.edu.pwr.drozd.musicplayer.PlayerActivity"
    tools:layout_editor_absoluteX="0dp"
    tools:layout_editor_absoluteY="25dp">

    <ImageView
        android:id="@+id/poster_img"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:layout_marginBottom="8dp"
        android:layout_marginLeft="8dp"
        android:layout_marginRight="8dp"
        android:layout_marginTop="8dp"
        app:layout_constraintBottom_toTopOf="@+id/guideline2"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:srcCompat="@drawable/poster_placeholder"
        android:contentDescription="@string/poster_img"/>

    <android.support.constraint.Guideline
        android:id="@+id/guideline"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        app:layout_constraintGuide_percent="0.9"
        tools:layout_editor_absoluteX="0dp"
        tools:layout_editor_absoluteY="511dp" />

    <LinearLayout
        android:id="@+id/linearLayout"
        android:background="@color/seekBar_Background"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:padding="@dimen/seekBar_padding"
        android:layout_marginBottom="8dp"
        android:layout_marginTop="8dp"
        android:gravity="center"
        android:orientation="vertical"
        app:layout_constraintBottom_toTopOf="@+id/guideline"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toTopOf="@+id/guideline2">

        <TextView
            android:id="@+id/song_title"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textSize="@dimen/songTitle_textSize"
            android:textColor="@color/songTitle_textColor"
            android:text="@string/hello_world"/>

        <android.support.v7.widget.AppCompatSeekBar
            android:layout_width="match_parent"
            android:layout_height="wrap_content" />

        <TextView
            android:id="@+id/song_author"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textSize="@dimen/songAuthor_textSize"
            android:textColor="@color/songAuthor_textColor"/>
    </LinearLayout>

    <android.support.constraint.Guideline
        android:id="@+id/guideline2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        app:layout_constraintGuide_percent="0.76" />

    <LinearLayout
        style="@style/ControlPanel"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:layout_marginBottom="0dp"
        android:layout_marginLeft="0dp"
        android:layout_marginRight="0dp"
        android:layout_marginTop="8dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toTopOf="@+id/guideline"
        app:layout_constraintVertical_bias="0.0">

        <ImageButton
            android:id="@+id/prev_song_btn"
            style="@style/ControlPanel.ControlButton"
            android:rotation="180"
            app:srcCompat="@drawable/ic_skip_next_white_24dp"
            android:contentDescription="@string/prev_song"/>

        <ImageButton
            android:id="@+id/backward_song_btn"
            style="@style/ControlPanel.ControlButton"
            android:rotation="180"
            app:srcCompat="@drawable/ic_fast_forward_white_24dp"
            android:contentDescription="@string/backward_song"/>

        <ImageButton
            android:id="@+id/play_song_btn"
            style="@style/ControlPanel.ControlButton"
            app:srcCompat="@drawable/ic_play_arrow_white_24dp"
            android:contentDescription="@string/play_song"/>

        <ImageButton
            android:id="@+id/forward_song_btn"
            style="@style/ControlPanel.ControlButton"
            app:srcCompat="@drawable/ic_fast_forward_white_24dp"
            android:contentDescription="@string/forward_song"/>

        <ImageButton
            android:id="@+id/next_song_btn"
            style="@style/ControlPanel.ControlButton"
            app:srcCompat="@drawable/ic_skip_next_white_24dp"
            android:contentDescription="@string/next_song"/>
    </LinearLayout>

</android.support.constraint.ConstraintLayout>
